fix for when you make the window smaller some elements stay still and are not responsive

--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
     height: 135px;
     width: 100%;
     background-color: rgb(36, 35, 35);
